--- a/templates/index.html
+++ b/templates/index.html
@@ -131,7 +131,7 @@
         </div>
         <div class="volumn-button d-flex">
             <div class="volumn-icon d-flex justify-content-center align-items-center" style="font-size: 20px;"><i
-                    id="volume-icon" class="fas fa-volume-up"></i></div>
+                    id="volume-icon" class="fas fa-volume-up" onclick="volToUnactive();"></i></div>
             <div class="volumn-bar d-flex justify-content-center align-items-center">
                 <div class="progessing-3">
                     <div class="progress progess-border-20px">
